--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: C
 compiler: clang
 sudo: false
-script:
-  - make all
-  - make test
 
+before_install:
+  before_install:
+  - pip install --user cpp-coveralls
+
+script:
+  - make all && make test
+
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
