--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ compiler: clang
 sudo: false
 
 before_install:
-  before_install:
   - pip install --user cpp-coveralls
 
 script:
   - make all && make test
 
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - coveralls --exclude obj --exclude test --gcov-options '\-lp'
