--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Unity"]
 	path = Unity
 	url = https://github.com/ThrowTheSwitch/Unity
+[submodule "fff"]
+	path = fff
+	url = https://github.com/meekrosoft/fff.git
